# aoe2rec

./: Cargo.toml
.github/workflows/: npm.yaml
crates/aoe2js/: CHANGELOG.md  Cargo.toml
crates/aoe2js_api/: Cargo.toml
crates/aoe2rec/: CHANGELOG.md  Cargo.toml
crates/aoe2rec-js/: CHANGELOG.md  Cargo.toml
crates/aoe2rec-py/: CHANGELOG.md  Cargo.toml
crates/aoe2rec/src/: actions.rs  lib.rs
crates/aoe2rec/src/header/: ai.rs  mod.rs
patterns/: aoe2header.hexpat  aoe2operations.hexpat  aoe2record.hexpat
