[package]
name = "aoe2rec-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
aoe2rec = { version = "0.5.1", path = "crates/aoe2rec" }

[workspace]
members = [
	"crates/aoe2js",
	"crates/aoe2js_api",
	"crates/aoe2rec",
	"crates/aoe2rec-js",
	"crates/aoe2rec-py",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
