[package]
name = "aoe2js_api"
version = "0.1.0"
edition = "2021"

[dependencies]
aoe2rec = { version = "0.5.1", path = "../aoe2rec" }
axum = { version = "0.7.7", features = ["http2", "multipart"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.1", features = ["full", "tokio"] }
tower-http = { version = "0.6.1", features = ["trace", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
