[package]
name = "aoe2rec-py"
version = "0.1.17"
edition = "2021"
description = "Python package for the aoe2rec rust crate, which allows to parse Age of Empires II: Definitive Edition recorded games"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "aoe2rec_py"

[dependencies]
aoe2rec = { path = "../aoe2rec", version = "0.5.1" }
bytes = "1.9.0"
pyo3 = "~0.27.0"
pythonize = "0.27.0"
